kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvak
spec:
  selector:
    app: kvak
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kvak-nginx
spec:
  selector:
    app: kvak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
